# metrics-analysis

./: Api Call Analyzer.ipynb  First Data Analysis.ipynb  General Comparison.ipynb  Quick Comparison.ipynb  chrome_utils.py  config.py  cpu.ipynb  data_downloader.py  download_batches.py  file_manager.py  pyproject.toml  quick_downloader.py  snapshot_recorder.py  utils.py
cache_manager/: database.py  file_manager.py
downloader/: chrome_utils.py  download_config.py
plotters/: bar_plotters.py  common.py  hist_plotters.py  line_plotters.py
processor/: filters.py  load.py
summarizer/: multi.py  simple_summarizer.py
