[project]
name = "grafana-exploration"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.5",
    "matplotx>=0.3.10",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.0.250703",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
]
